[package]
name = "hskx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
colored = "2.0.4"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.2.2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
