[package]
name = "hskx"
version = "1.0.1"
authors = ["neuromeow <neuromeowhouse@gmail.com>"]
rust-version = "1.70.0"
edition = "2021"
description = "Command line tool to prepare for the Hanyu Shuiping Kaoshi (HSK)"
readme = "README.md"
homepage = "https://github.com/neuromeow/hskx"
repository = "https://github.com/neuromeow/hskx"
license = "MIT"
keywords = ["cli", "education", "chinese"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0.16"
colored = "2.1.0"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
